--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "node ."
   },
   "keywords": [],
-  "author": "Elias",
-  "license": "ISC",
+  "author": "",
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.27.2",
     "express": "^4.18.1",
