Vercel stop comments + Fix README

--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,8 @@
             "src": "/(.*)",
             "dest": "src/index.js"
         }
-    ]
+    ],
+    "github": {
+        "silent": true
+    }
 }
